# summer

./: .gitignore  Cargo.toml  rule.md
.github/workflows/: ci.yml
boot/: Cargo.toml
boot-macros/: Cargo.toml
boot-macros/src/: app.rs  component.rs  lib.rs  mapping.rs
config/: application.yaml
crates/summer/: Cargo.toml  todo.md
crates/summer-aop/: Cargo.toml  todo.md
crates/summer-autoconfigure/: Cargo.toml  todo.md
crates/summer-config/: Cargo.toml  todo.md
crates/summer-core/: Cargo.toml  todo.md
crates/summer-core/src/: error.rs  ioc.rs  lib.rs
crates/summer-http/: Cargo.toml  todo.md
crates/summer-ioc/: Cargo.toml  todo.md
crates/summer-ioc/src/: bean.rs  builder.rs  condition.rs  config.rs  container.rs  context.rs  definition.rs  error.rs  event.rs  factory.rs  lib.rs  processor.rs  reflect.rs  scope.rs
crates/summer-logging/: Cargo.toml  todo.md
crates/summer-logging/src/: config.rs  error.rs  init.rs  lib.rs  pattern.rs
crates/summer-macros/: Cargo.toml  todo.md
crates/summer-macros/src/: ioc.rs  lib.rs
crates/summer-plugin/: Cargo.toml  todo.md
crates/summer-web/: Cargo.toml  todo.md
doc/: 开发计划.md  概要设计说明书.md  需求规格说明书.md
docs/: book.toml
docs/src/: 1. 需求规格说明书.md  2. 概要设计说明书.md  3. 开发计划.md  SUMMARY.md
docs/src/详细设计/: 1. 日志模块设计说明书.md  2. 配置模块设计说明书.md  3. IOC模块设计说明书.md  4. HTTP模块设计说明书.md  5. MVC模块设计说明书.md  6. AOP模块设计说明书.md  7. 自动配置模块设计说明书.md  8. 插件模块设计说明书.md
examples/database-app/: Cargo.toml
examples/full-features/: Cargo.toml
examples/test_app/: Cargo.toml
starters/summer-starter/: Cargo.toml
starters/summer-starter-redis/: Cargo.toml
starters/summer-starter-sqlx/: Cargo.toml
starters/summer-starter-web/: Cargo.toml
