[package]
name = "boot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
inventory = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
] } # env-filter for log level control
time = { version = "0.3", features = [
    "local-offset",
    "macros",
] } # Add time crate with local-offset and macros feature

# Configuration dependencies
config = { version = "0.14", features = ["yaml"] } # Enable YAML format support
serde = { version = "1.0", features = ["derive"] } # Ensure serde is present
serde_json = "1.0"
once_cell = "1.19"

# HTTP handling
urlencoding = "2.1"
async-trait = "0.1"
regex = "1.10"

boot-macros = { path = "../boot-macros" }
