[package]
name = "summer-ioc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
summer-core = { path = "../summer-core" }

[dev-dependencies]
summer-macros = { path = "../summer-macros" }
tokio = { version = "1", features = ["full"] }
summer-core = { path = "../summer-core" }
