[package]
name = "summer-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true # Important for procedural macros

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] } # Updated to 2.0
quote = "1.0"
proc-macro2 = "1.0"
# Change dependency to summer-core
summer-core = { path = "../summer-core" }
